@@ -2,6 +2,8 @@ DATE        AUTHOR      CHANGE
 ---------- -----------  -------------------------------------------------------
 NOTE: Odd numbered minor versions are development series (ex: 0.1, 0.9, etc)
 
+2005-02-06 allenb       Added hasOption() method to OptionRepository
+                        VERSION: 0.5.6
 2005-02-04 allenb       Added ability to get children by path.
                         Added extension to assist with using xml files
                         as configuration files.  See: ext/OptionRepository.h
